# backtest-engine

./: .gitignore  CMakeLists.txt  build.sh
docs/: api.md  architecture.md  benchmarks.md
engine/bindings/: python_bindings.cpp
engine/core/: event_loop.cpp  event_loop.hpp  execution.cpp  execution.hpp  portfolio.cpp  portfolio.hpp  types.hpp
engine/cuda/: gpu_execution.cu  gpu_execution.hpp  gpu_kernels.cu  gpu_kernels.cuh
examples/: benchmark.py  benchmark_cpu.py  benchmark_gpu_scaling.py  ema_cross.ipynb
python/: backtester.py  test_exports.py
